--- a/package.json
+++ b/package.json
@@ -60,5 +60,14 @@
     "fuse.js": "^6.4.6",
     "react": "^17.0.2",
     "relay-test-utils": "^11.0.2"
-  }
+  },
+  "keywords": [
+    "react",
+    "relay",
+    "storybook",
+    "relay mock",
+    "relay environment",
+    "relay-runtime",
+    "relay-test-utils"
+  ]
 }
