--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test": "tsdx test",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
+    "docs": "typedoc docs src/index.ts",
+    "prepack": "yarn run docs",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
@@ -53,6 +55,8 @@
     "size-limit": "^5.0.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.0",
+    "typedoc": "^0.21.4",
+    "typedoc-plugin-markdown": "^3.10.4",
     "typescript": "^4.3.5"
   },
   "dependencies": {
