--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "docs": "typedoc docs src/index.ts",
-    "prepack": "yarn run docs",
+    "prepack": "yarn run docs && git add docs/",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
