--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
-    "lint": "tsdx lint",
+    "lint": "tsdx lint src test",
     "prepare": "tsdx build",
     "docs": "typedoc docs src/index.ts",
     "prepack": "yarn run docs && git add docs/",
@@ -54,6 +54,8 @@
     "@types/faker": "^5.5.6",
     "@types/react": "^17.0.13",
     "@types/relay-test-utils": "^6.0.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "husky": "^7.0.0",
     "size-limit": "^5.0.1",
     "tsdx": "^0.14.1",
@@ -63,10 +65,14 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "faker": "^5.5.3",
-    "fuse.js": "^6.4.6",
-    "react": "^17.0.2",
-    "relay-test-utils": "^11.0.2"
+    "faker": "5.5.3",
+    "fuse.js": "6.4.6",
+    "react": "17.0.2",
+    "relay-test-utils": "11.0.2"
+  },
+  "resolutions": {
+    "**/@typescript-eslint/eslint-plugin": "^4.1.1",
+    "**/@typescript-eslint/parser": "^4.1.1"
   },
   "keywords": [
     "react",
