--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: ['12.x', '14.x']
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        node: ['14.x']
+        os: [ubuntu-latest]
 
     steps:
       - name: Checkout repo
@@ -21,6 +21,9 @@ jobs:
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
+
+      - name: Lint
+        run: yarn lint
 
       - name: Test
         run: yarn test --ci --coverage --maxWorkers=2
