--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
-  "peerDependencies": {},
   "husky": {
     "hooks": {
       "pre-commit": "tsdx lint"
@@ -57,6 +56,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "husky": "^7.0.0",
+    "react": "^17.0.2",
     "size-limit": "^5.0.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.0",
@@ -67,8 +67,10 @@
   "dependencies": {
     "faker": "5.5.3",
     "fuse.js": "6.4.6",
-    "react": "17.0.2",
     "relay-test-utils": "11.0.2"
+  },
+  "peerDependencies": {
+    "react": ">16"
   },
   "resolutions": {
     "**/@typescript-eslint/eslint-plugin": "^4.1.1",
