--- a/package.json
+++ b/package.json
@@ -50,25 +50,24 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^5.0.1",
-    "@types/faker": "^5.5.6",
     "@types/react": "^17.0.13",
     "@types/relay-test-utils": "^6.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "husky": "^7.0.0",
     "react": "^17.0.2",
     "react-relay": "^15.0.0",
     "relay-test-utils": "^15.0.0",
     "size-limit": "^5.0.1",
     "tsdx": "^0.14.1",
-    "tslib": "^2.3.0",
-    "typedoc": "^0.21.4",
-    "typedoc-plugin-markdown": "^3.10.4",
-    "typescript": "^4.3.5"
+    "tslib": "^2.6.2",
+    "typedoc": "^0.25.8",
+    "typedoc-plugin-markdown": "^3.17.1",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "faker": "5.5.3",
-    "fuse.js": "6.4.6"
+    "@faker-js/faker": "^8.4.1",
+    "fuse.js": "^7.0.0"
   },
   "peerDependencies": {
     "react": ">16",
